--- a/supervisely/labeling-tool/src/ui/tags_tab.html
+++ b/supervisely/labeling-tool/src/ui/tags_tab.html
@@ -68,8 +68,9 @@
                          style="height: 100%; flex-direction: row; justify-content: space-between; align-items: flex-start">
 
                         <div class="fflex"
-                             style="flex-direction: column; justify-content: flex-start; align-items: flex-start;  width: 100%; height: 100%;
-                             margin-right: 10px">
+                             style="flex-direction: column; justify-content: flex-start;
+                                         align-items: flex-start; width: 50%;
+                                         max-width: 200px; height: 100%; margin-right: 10px">
                             <div
                                     class="fflex"
                                     style="flex-direction: row; margin: 0 0; justify-content: center">
@@ -132,13 +133,13 @@
                         </div>
 
 
-                        <div class="fflex"
-                             style="flex-direction: row; justify-content: space-between; align-items: center; width: 100%">
+                        <div class=""
+                             style="width: 50%; flex: 1;">
 
 
                             <sly-image-slider
-                                    class="fflex custom-slider-wrapper"
-                                    style="width: 250px; height: 213px; justify-content: flex-end; align-items: center"
+                                    class="custom-slider-wrapper"
+                                    style="height: 213px; justify-content: flex-end; align-items: center"
                                     :data="state.lastAssignedTag.url"></sly-image-slider>
                         </div>
                     </div>
@@ -183,7 +184,9 @@
                                          style="height: 100%;  flex-direction: row; justify-content: space-between; align-items: flex-start">
 
                                         <div class="fflex"
-                                             style="flex-direction: column; justify-content: flex-start; align-items: flex-start; width: 100%; height: 100%; margin-right: 10px">
+                                             style="flex-direction: column; justify-content: flex-start;
+                                         align-items: flex-start; width: 50%;
+                                         max-width: 200px; height: 100%; margin-right: 10px">
                                             <div
                                                     class="fflex"
                                                     style="flex-direction: row; margin: 0 0; justify-content: center">
@@ -215,13 +218,13 @@
                                         </div>
 
 
-                                        <div class="fflex"
-                                             style="flex-direction: row; justify-content: space-between; align-items: center; width: 100%">
+                                        <div class=""
+                                             style="width: 50%; flex: 1;">
 
 
                                             <sly-image-slider
-                                                    class="fflex custom-slider-wrapper"
-                                                    style="width: 250px; height: 213px; justify-content: flex-end; align-items: center"
+                                                    class="custom-slider-wrapper"
+                                                    style="height: 213px; justify-content: flex-end; align-items: center"
                                                     :data="predicted_data.url"></sly-image-slider>
                                         </div>
                                     </div>
@@ -262,7 +265,9 @@
                                      style="height: 100%; flex-direction: row; justify-content: space-between; align-items: flex-start">
 
                                     <div class="fflex"
-                                         style="flex-direction: column; justify-content: flex-start; align-items: flex-start; width: 100%; height: 100%; margin-right: 10px">
+                                         style="flex-direction: column; justify-content: flex-start;
+                                         align-items: flex-start; width: 50%;
+                                         max-width: 200px; height: 100%; margin-right: 10px">
                                         <div
                                                 class="fflex"
                                                 style="flex-direction: row; margin: 0 0; justify-content: center">
@@ -304,13 +309,13 @@
                                     </div>
 
 
-                                    <div class="fflex"
-                                         style="flex-direction: row; justify-content: space-between; align-items: center; width: 100%">
+                                    <div class=""
+                                         style="width: 50%; flex: 1;">
 
 
                                         <sly-image-slider
-                                                class="fflex custom-slider-wrapper"
-                                                style="width: 250px; height: 213px; justify-content: flex-end; align-items: center"
+                                                class="custom-slider-wrapper"
+                                                style="height: 213px; justify-content: flex-end; align-items: center"
                                                 :data="predicted_data.url"></sly-image-slider>
                                     </div>
                                 </div>
