--- a/supervisely/labeling-tool/src/ui/catalog_tab.html
+++ b/supervisely/labeling-tool/src/ui/catalog_tab.html
@@ -99,13 +99,13 @@
                             </div>
 
 
-                            <div class="fflex"
-                                 style="flex-direction: column; justify-content: center; align-items: center;"
+                            <div class=""
+                                 style="width: 100%; flex: 1;"
                             >
 
                                 <sly-image-slider
-                                        class="fflex custom-full-size-slider"
-                                        style="width: 500px; height: 213px; justify-content: center; align-items: center"
+                                        class="custom-full-size-slider"
+                                        style="height: 213px; justify-content: flex-end; align-items: center"
                                         :data="state.selectedDatabaseItem.url"></sly-image-slider>
                             </div>
 
