serving now can work with cpu

--- a/supervisely/serve/src/modal.html
+++ b/supervisely/serve/src/modal.html
@@ -80,6 +80,13 @@
     </sly-field>
 
     <sly-field title="Choose Device" description="CUDA device or CPU">
-        <el-input v-model="state.device" style="width:250px;"></el-input>
+        <el-select v-model="state.device" :disabled="data.done6">
+            <el-option key="cpu" label="cpu" value="cpu"></el-option>
+            <el-option key="cuda:0" label="cuda:0" value="cuda:0"></el-option>
+            <el-option key="cuda:1" label="cuda:1" value="cuda:1"></el-option>
+            <el-option key="cuda:2" label="cuda:2" value="cuda:2"></el-option>
+            <el-option key="cuda:3" label="cuda:3" value="cuda:3"></el-option>
+        </el-select>
+<!--        <el-input v-model="state.device" style="width:250px;"></el-input>-->
     </sly-field>
 </div>
