empty images functional added tagPerImage functional added

--- a/supervisely/labeling-tool/src/ui/settings_tab.html
+++ b/supervisely/labeling-tool/src/ui/settings_tab.html
@@ -12,19 +12,19 @@
 
     <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>
 
-<!--    <sly-field-->
-<!--            style="padding-top: 8px"-->
-<!--            title="Object padding"-->
-<!--            description="padding outside image patch">-->
-<!--        <div class="fflex">-->
-<!--            <el-input-number-->
-<!--                    class="mt5"-->
-<!--                    size="small" v-model="state.pad" :min="0"></el-input-number>-->
-<!--            <div class="ml5">percent</div>-->
-<!--        </div>-->
-<!--    </sly-field>-->
+    <!--    <sly-field-->
+    <!--            style="padding-top: 8px"-->
+    <!--            title="Object padding"-->
+    <!--            description="padding outside image patch">-->
+    <!--        <div class="fflex">-->
+    <!--            <el-input-number-->
+    <!--                    class="mt5"-->
+    <!--                    size="small" v-model="state.pad" :min="0"></el-input-number>-->
+    <!--            <div class="ml5">percent</div>-->
+    <!--        </div>-->
+    <!--    </sly-field>-->
 
-<!--    <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>-->
+    <!--    <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>-->
 
     <div class="fflex"
          style="padding-top: 8px;
@@ -69,27 +69,25 @@
     </sly-field>
 
     <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>
-    <!--    <sly-field title="Apply to" description="Apply model to images or to objects">-->
-    <!--        <el-select v-model="state.applyTo" size="small">-->
-    <!--            <el-option key="image" label="image" value="image"></el-option>-->
-    <!--            <el-option key="object" label="object" value="object"></el-option>-->
-    <!--        </el-select>-->
-    <!--    </sly-field>-->
-    <!--    <sly-field title="Assign mode"-->
-    <!--               description="Tag will be appended to existing ones (duplicates are allowed). Or if object-->
-    <!--                                   or image has some of the model tags, they will be replaced"-->
-    <!--    >-->
-    <!--        <el-select v-model="state.assignMode" size="small" :disabled="true">-->
-    <!--            <el-option key="append" label="append" value="append"></el-option>-->
-    <!--            <el-option key="replace" label="replace" value="replace"></el-option>-->
-    <!--        </el-select>-->
-    <!--    </sly-field>-->
 
-    <!--    <sly-field title="Cache"-->
-    <!--               description="App caches metadata, images and annotations. Clear cache if you get-->
-    <!--                                   special notifications from the app">-->
-    <!--        <el-button size="small"-->
-    <!--                   :loading="state.loading"-->
-    <!--                   @click="state.loading = true; command('clear_cache')">Clear cache</el-button>-->
-    <!--    </sly-field>-->
+    <div class="fflex"
+         style="padding-top: 8px;
+          padding-bottom: 15px;
+          flex-direction: row"
+    >
+        <el-switch
+                class="mr15"
+                v-model="state.tagPerObject"
+                on-text=""
+                off-text="">
+
+        </el-switch>
+        <sly-field
+                class="ml10"
+                style="margin-bottom: 5px; margin-top: 5px"
+                title="Tag per Object"
+                description="allows to assign only one tag per object">
+        </sly-field>
+    </div>
+
 </sly-card>
